Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11416

SlotRef::tuple_is_nullable_ uninitialised for struct children

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.2.0, Impala 4.1.1
    • Backend
    • None
    • ghx-label-10

    Description

      In SlotRef::Init, tuple_is_nullable_ is only assigned a value if the SlotRef is not within a struct:

      if (!slot_desc_->parent()->isTupleOfStructSlot()) {
            tuple_is_nullable_ = row_desc.TupleIsNullable(tuple_idx_);
      }
      

      https://github.com/apache/impala/blob/fefb9f24be1f99ac0077a8d6ef00834d8e90ef45/be/src/exprs/slot-ref.cc#L103

      Otherwise tuple_is_nullable_ remains uninitialised, leading to undefined behaviour when it is read.

      Attachments

        Activity

          People

            daniel.becker Daniel Becker
            daniel.becker Daniel Becker
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: