IMPALA-11416: SlotRef::tuple_is_nullable_ uninitialised for struct children

In 'SlotRef::Init', 'tuple_is_nullable_' is only assigned a value if the
'SlotRef' is not within a struct:

  ```
  if (!slot_desc_->parent()->isTupleOfStructSlot()) {
    tuple_is_nullable_ = row_desc.TupleIsNullable(tuple_idx_);
  }
  ```

Otherwise 'tuple_is_nullable_' remains uninitialised, leading to
undefined behaviour when it is read.

After this commit, 'tuple_is_nullable_' is set to false within structs.

Change-Id: I67517502ebc8f9bec52cb61d9922523cc4a56c4a
Reviewed-on: http://gerrit.cloudera.org:8080/18702
Reviewed-by: Gabor Kaszab <gaborkaszab@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>