be/src/exprs/slot-ref.cc
@@ -99,9 +99,8 @@ Status SlotRef::Init(
       return Status(error);
     }
     DCHECK(tuple_idx_ != RowDescriptor::INVALID_IDX);
-    if (!slot_desc_->parent()->isTupleOfStructSlot()) {
-      tuple_is_nullable_ = row_desc.TupleIsNullable(tuple_idx_);
-    }
+    tuple_is_nullable_ = slot_desc_->parent()->isTupleOfStructSlot() ?
+        false : row_desc.TupleIsNullable(tuple_idx_);
     slot_offset_ = slot_desc_->tuple_offset();
     null_indicator_offset_ = slot_desc_->null_indicator_offset();
   }
